fixed broken layout on signup

--- a/react-app/src/components/auth/SignUpForm.css
+++ b/react-app/src/components/auth/SignUpForm.css
@@ -10,7 +10,7 @@
   justify-content: center;
   height: 400px;
   margin-top: 150px;
-  margin-bottom: 400px;
+  margin-bottom: 350px;
 }
 
 .signUp-container {
@@ -20,7 +20,7 @@
   border: solid lightgray 1px;
   height: 60rem;
   width: 20rem;
-  box-shadow: 1px 1px 25px #888888;
+  /* box-shadow: 1px 1px 25px #888888; */
 
   display: flex;
   flex-direction: column;
